# whm-agent-cockpit

./: .gitignore  PROGRESS.md  README.md  REASONIX.md  cockpit-final-prd-v2.md  cockpit-fixes.md  cockpit-prd-v2-required-changes-addendum.md  cockpitreview.md  pyproject.toml  whmreview.md
config/: README.md  policy.example.toml
deploy/: .env.example  cockpit-client-api.service  cockpit-collector.service  cockpit-dashboard.service  install.sh
src/cockpit/: __init__.py  codex.py  config.py  issues.py  reporting.py  whm_client.py
src/cockpit/api/: client_telemetry.py
src/cockpit/collectors/: base.py  critical_loop.py  http_health.py  jetbackup.py  lve_stats.py  mail_queue.py  runner.py  server_health.py  service_status.py  ssl_expiry.py  whm_accounts.py
src/cockpit/dashboard/: app.py
src/cockpit/dashboard/templates/: account_detail.html  accounts.html  audit.html  backups.html  base.html  dashboard.html  mail.html  offenders.html  ssl.html
src/cockpit/db/: migrate.py
src/cockpit/executor/: catalog.py  runner.py
src/cockpit/executor/handlers/: __init__.py  system.py
src/cockpit/policy/: engine.py
tests/: test_policy.py  test_whm_client.py
